# all-rag-tester

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  containers.py  main.py
app/api/: qa.py
app/databases/: vectorstore.py
app/schemas/: base.py  qa.py
app/services/: qa_service.py
app/utils/: chain.py  embeddings.py  file_loader.py  llm.py  memory.py  prompt.py  retriever.py
app/worker/: celery_config.py  tasks.py
data/prompt/: qa_langsmith_prompt_template.yaml  qa_prompt_template.yaml
frontend/: streamlit_app.py
requirements/: prod.txt
scripts/: format.sh
